# floxdocs

./: .envrc  .gitignore  .gitlab-ci.yml  .markdownlint-cli2.yaml  LICENSE  Makefile  README.md  check_links.sh  flake.nix  justfile  lychee.toml  mkdocs.yml  netlify.toml  overrides.nix  pyproject.toml  sitemap_old.xml  tesh-setup.sh  tesh-teardown.sh  tesh.sh  todo.md
.circleci/: config.yml
.flox/: env.json
.flox/env/: manifest.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: auto-label.yml  ci.yml  update.yml
docs/: flox-5-minutes.md  index.md  index2.md  install-flox.md  llms.json  llms.txt
docs/comparisons/: flox-vs-containers.md
docs/concepts/: activation.md  auto-activation.md  base-catalog.md  builds.md  compatibility.md  composition.md  environments.md  flox-vs-containers.md  floxhub-environments.md  floxhub.md  generations.md  manifest-builds.md  manifest.md  nix-expression-builds.md  organizations.md  package-groups.md  packages-and-catalog.md  priority.md  publishing.md  secrets-management.md  services.md  telemetry-in-flox.mdx
docs/containers/: intro.md  tech.md
docs/css/: extra.css
docs/customer/: catalog-store.md  known-issues.md  signing-keys.md
docs/explanations/: environments.md  floxhub.md  manifest-builds.md  nix-expression-builds.md  organizations.md  packages-and-catalog.md  publishing.md  services.md
docs/imageless-kubernetes/: config.md  intro.md  tech.md
docs/k8s/: auth.md  (+4 more)
overrides/: main.html
tools/: README.md  generate_llms_txt.py  generate_llms_txt.sh
(+132 files in other folders)
